--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,8 +3,23 @@ body {
   margin: 0;
 }
 
-#map,
+#myMap,
 body,
 html {
   height: 100%;
+}
+
+.legend {
+  padding: 10px;
+  line-height: 18px;
+  color: #555;
+  background-color: #fff;
+  border-radius: 5px;
+}
+.legend i {
+  float: left;
+  width: 18px;
+  height: 18px;
+  margin-right: 8px;
+  opacity: 0.7;
 }
